styles/certificate.css
body {
    font-family: 'Roboto', sans-serif;
    font-size: 1.4rem;
}

div {
    margin: 1rem auto;
}

body.cert .no-cert {
    display: none;
}

body:not(.cert) .has-cert {
    display: none;
}

.no-cert {
    padding: 1rem;
    border: 3px solid rgb(128, 52, 52);
    background-color: rgb(255, 200, 137);
    border-radius: 1rem;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
    margin: 0 5rem;
}

div.cert {
    max-width: 800px;
    height: calc(1545/2000 * 800px);
    background-image: url("/images/cert-background.png");
    background-size: contain;
    background-repeat: no-repeat;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    display: flex;
    justify-content: flex-end;
}

div.cert-body {
    width: 70%;
    margin: 0 0% 0 30%;
    padding: 0 1rem;
    text-align: center;
    display: flex;
    flex-direction: column;
}

h1 {
    font-family:Georgia, 'Times New Roman', Times, serif;
    font-size: 3rem;
    padding-bottom: 1rem;
}

#name {
    font-family: 'Tangerine', cursive;
    font-weight: bold;
    font-size: 4rem;
    padding-bottom: 0.3em;
    margin-bottom: 0.3em;
    border-bottom: 1px solid black;
}

span.org {
    font-weight: bold;
}

div.description {
    font-size: 1rem;
    margin: 0.5em auto;
    line-height: 1.5;
}

div.course {
    margin: 1rem auto;
    font-size: 3rem;
    font-weight: bold;
    text-align: center;
}

div.footer {
    display: flex;
    margin: 1rem 0;
    width: 100%;
    flex-direction: column;
    justify-content: space-between;
    height: 500px;
}

/* 0 margins were needed to make justify-content work */

div.sigs {
    display: flex;
    margin: 0;
    flex: none;
    flex-direction: row;
    justify-content: space-around;
}

div.signature {
    font-size: 1.1rem;
    margin: 1rem 0;
    display: inline-block;
    text-align: center;
}

span.sig-name {
    font-weight: bold;
}

div.issuer {
    font-family: 'Courier New', Courier, monospace;
    font-size: 0.7rem;
    margin: 1em 0;
    text-align: right;
}

.logo {
    width: 124px;
    float: left;
    margin: 0 1rem 1rem 0;
}

.footer {
    font-size: 0.7em;
}

.li-button {
    height: 1rem;
    margin: 0 1rem;
}

